# edinet-sdk

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  README.md  cspell.json  main.py  pyproject.toml
.claude/: debug.md  gh_pr_create.md  gh_pr_review.md  git_commit.md  learnings.md  nextsteps.md  read_prd.md  refactor.md  retrospective.md  spec_create.md  testandfix.md  workonissue.md
docs/: code_improvement_recommendations.md
docs/archive/: feature_company_date_range.md
docs/backlog/: feature_api_versioning.md  feature_code_list_download.md  feature_document_type_filtering.md  feature_xbrl_csv_fetching.md  feature_xbrl_csv_support.md
src/: cache.py  config.py  config_validation.py  constants.py  error_handlers.py  exceptions.py  logging_config.py  models.py  services.py  utils.py
src/edinet/: client.py  decorators.py  doc_metadata_example.py  edinet_tools.py  funcs.py  schemas.py  utils.py
src/llm_tools/: __init__.py  base_tool.py  executive_summary_tool.py  oneliner_tool.py  schemas.py
src/processors/: CLAUDE.md  base_processor.py  extraordinary_processor.py  generic_processor.py  schemas.py  semiannual_processor.py
tests/: conftest.py
tests/integration/: test_api_integration.py
tests/unit/: test_client.py  test_config.py  test_processors.py  test_utils.py
