[project]
name = "edinet-api-tools"
version = "0.1.0"
description = "Edinet API parser tool with LLM analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "annotated-types",
  "anyio",
  "certifi",
  "chardet",
  "charset-normalizer",
  "click",
  "click-default-group",
  "colorama",
  "condense-json",
  "distro",
  "flake8",
  "h11",
  "httpcore",
  "httpx",
  "idna",
  "jiter",
  "llm",
  "mccabe",
  "mypy-extensions",
  "numpy",
  "openai",
  "packaging",
  "pandas",
  "pathspec",
  "platformdirs",
  "pluggy",
  "puremagic",
  "pycodestyle",
  "pydantic",
  "pydantic_core",
  "pyflakes",
  "python-dateutil",
  "python-dotenv",
  "python-ulid",
  "pytz",
  "PyYAML",
  "six",
  "sniffio",
  "sqlite-fts4",
  "sqlite-migrate",
  "sqlite-utils",
  "tabulate",
  "tqdm",
  "typing-inspection",
  "typing_extensions",
  "tzdata",
]

[dependency-groups]
dev = [
  "ipykernel>=6.30.1",
  "ipython>=9.4.0",
  "mypy>=1.17.1",
  "pandas-stubs>=2.3.0.250703",
  "pre-commit>=4.3.0",
  "ruff>=0.12.8",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".git", "__pycache__", ".venv", "downloads/", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
