[project]
name = "edinet-sdk"
version = "0.2.0"
description = "Edinet API data handling SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "chardet>=5.2.0",
  "httpx",
  "pandas",
  "pydantic",
  "python-dateutil",
  "python-dotenv",
  "tqdm",
  "typing_extensions",
]

[dependency-groups]
dev = [
  "ipykernel>=6.30.1",
  "ipython>=9.4.0",
  "mypy>=1.17.1",
  "pandas-stubs>=2.3.0.250703",
  "pre-commit>=4.3.0",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.12.8",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".git", "__pycache__", ".venv", "downloads/", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
